--- a/code/Flink/flink-basis-java/src/main/resources/log4j.properties
+++ b/code/Flink/flink-basis-java/src/main/resources/log4j.properties
@@ -1,4 +1,9 @@
 ################################################################################
+#  Apache Flink项目Log4j日志配置文件
+#  
+#  这个配置文件定义了Flink应用程序的日志输出格式和级别
+#  主要配置了控制台输出，方便在开发和调试时查看日志信息
+#  
 #  Licensed to the Apache Software Foundation (ASF) under one
 #  or more contributor license agreements.  See the NOTICE file
 #  distributed with this work for additional information
@@ -16,8 +21,21 @@
 # limitations under the License.
 ################################################################################
 
+# 根日志器配置：设置日志级别为INFO，输出到console appender
+# INFO级别会显示INFO、WARN、ERROR级别的日志，过滤掉DEBUG和TRACE
 log4j.rootLogger=INFO, console
 
+# 控制台输出器配置：定义日志输出到控制台
 log4j.appender.console=org.apache.log4j.ConsoleAppender
+
+# 控制台输出器的布局配置：使用模式布局
 log4j.appender.console.layout=org.apache.log4j.PatternLayout
+
+# 日志输出格式模式：
+# %d{HH:mm:ss,SSS} - 时间戳（时:分:秒,毫秒）
+# %-5p - 日志级别，左对齐，占5个字符宽度
+# %-60c - 日志器名称（通常是类名），左对齐，占60个字符宽度
+# %x - NDC（嵌套诊断上下文）信息
+# %m - 日志消息内容
+# %n - 换行符
 log4j.appender.console.layout.ConversionPattern=%d{HH:mm:ss,SSS} %-5p %-60c %x - %m%n
